Fixed thread pool for naming